<resources>
    <string name="app_name">Maternal</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="dont_have_account"><u>Dont have account?</u></string>
    <string name="signIn">Sign In</string>
    <string name="password">Password</string>
    <string name="UsernameOrEmail">Username / E-mail</string>
    <string name="app_name2">MartenalCare</string>
    <string name="error_message">Error message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
</resources>